// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBarItem component NavigationBarItem mobile snapshot test should render correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "column",
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        undefined,
        Object {
          "alignItems": "center",
          "height": 44,
          "justifyContent": "center",
          "marginLeft": 20,
          "marginRight": 20,
          "marginTop": "auto",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#04142F",
            "fontFamily": "Roboto-Regular",
            "fontSize": 14,
            "letterSpacing": 0.32,
            "lineHeight": 22,
          },
          Object {
            "color": "white",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "height": 4,
          "width": "100%",
        },
        null,
      ]
    }
  />
</View>
`;

exports[`NavigationBarItem component NavigationBarItem web snapshot test should render correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
      "marginRight": 12,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        undefined,
        Object {
          "alignItems": "center",
          "height": 44,
          "justifyContent": "center",
          "marginLeft": 24,
          "marginRight": 24,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#04142F",
            "fontFamily": "Roboto-Regular",
            "fontSize": 14,
            "letterSpacing": 0.32,
            "lineHeight": 22,
          },
          Object {
            "color": "#8A94A6",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "height": 4,
          "width": "100%",
        },
        null,
      ]
    }
  />
</View>
`;
